<?xml version="1.0" encoding="utf-8"?><!-- Layout for a single list item -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F8F8FA"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image"
            android:layout_width="@dimen/item_height"
            android:layout_height="@dimen/item_height"
            android:layout_gravity="top"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:contentDescription="@string/image_description"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:id="@+id/text_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/header_text_view"
                style="@style/Header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Name" />

            <LinearLayout
                android:id="@+id/address_layout"
                style="@style/Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_marginEnd="@dimen/small_padding"
                    android:layout_marginRight="@dimen/small_padding"
                    android:contentDescription="@string/address_icon_description"
                    android:src="@drawable/address_icon" />

                <TextView
                    android:id="@+id/address_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/description_colour"
                    tools:text="address" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/phone_layout"
                style="@style/Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_marginEnd="@dimen/small_padding"
                    android:layout_marginRight="@dimen/small_padding"
                    android:contentDescription="@string/phone_icon_description"
                    android:src="@drawable/phone_icon" />

                <TextView
                    android:id="@+id/phone_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/description_colour"
                    tools:text="phone" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/prices_layout"
                style="@style/Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_marginEnd="@dimen/small_padding"
                    android:layout_marginRight="@dimen/small_padding"
                    android:contentDescription="@string/prices_icon_description"
                    android:src="@drawable/prices_icon" />

                <TextView
                    android:id="@+id/prices_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/description_colour"
                    tools:text="prices" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/cuisine_layout"
                style="@style/Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_marginEnd="@dimen/small_padding"
                    android:layout_marginRight="@dimen/small_padding"
                    android:contentDescription="@string/cuisine_icon_description"
                    android:src="@drawable/cuisine_icon" />

                <TextView
                    android:id="@+id/cuisine_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/description_colour"
                    tools:text="cuisine" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/description_layout"
                style="@style/Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/description_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/description_colour"
                    tools:text="description" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="@dimen/map_height"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/small_padding"
        android:contentDescription="@string/map_description"
        android:scaleType="centerCrop" />

</LinearLayout>